<refactor>(all): fix Config.Text unchanged after language changed

--- a/Sources/SSRefresh/ja.lproj/Localizable.strings
+++ b/Sources/SSRefresh/ja.lproj/Localizable.strings
@@ -7,3 +7,4 @@
 "上拉加载更多数据"         = "より多くのデータをロードするために引き上げる";
 "松开加载更多数据"         = "より多くのデータを解放してロードする";
 "正在加载更多数据..."      = "さらにデータを読み込んでいます...";
+"已加载完所有数据"         = "すべてのデータをロードしました。";
