--- a/Sources/SSRefresh/ko.lproj/Localizable.strings
+++ b/Sources/SSRefresh/ko.lproj/Localizable.strings
@@ -7,3 +7,4 @@
 "上拉加载更多数据"         = "데이터를 추가로로드하십시오";
 "松开加载更多数据"         = "더 많은 데이터 릴리스 및로드";
 "正在加载更多数据..."      = "추가 데이터로드 중 ...";
+"已加载完所有数据"         = "모든 데 이 터 를 불 러 왔 습 니 다.";
