--- a/Sources/SSRefresh/vi.lproj/Localizable.strings
+++ b/Sources/SSRefresh/vi.lproj/Localizable.strings
@@ -7,3 +7,4 @@
 "上拉加载更多数据"         = "Kéo lên để tải thêm dữ liệu";
 "松开加载更多数据"         = "Phát hành và tải thêm dữ liệu";
 "正在加载更多数据..."      = "Đang tải thêm dữ liệu ...";
+"已加载完所有数据"         = "Mọi dữ liệu đã được tải";
